--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=dog,ES
+spring.profiles.active=dog,ES,qa
 guru.username=superuser
 guru.password=dbPassword
 guru.jdbcurl=someURLforDB
