Added new profile specific properties in single application.yml file. Refactored active profiles property from CSV to YAML list

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,18 @@
 spring:
   profiles:
-    active: dog,ES,qa
+    active:
+      - dog
+      - ES
+      - prod
 guru:
   username: YMLUserName
   password: YMLPassword
   jdbcurl: YMLURL
+
+---
+spring:
+  profiles: prod
+guru:
+  username: YMLProdUserName
+  password: YMLProdPassword
+  jdbcurl: YMLProdURL
